# rapto-rs

./: .gitignore  DOCKER_SETUP.md  Dockerfile.bench  README.md  Rust-Powered-NumPy-Replacement-Full-Project-Plan.md  TODO.md  axis0_1024_sample.txt  axis0_2048_sample.txt  docker-compose.bench.yml  numpy_2d_array_optimization.md  pyproject.toml  pytest.ini  run_all_tests.sh
.cargo/: config.toml
benchmarks/: asv.conf.json  run_axis0_suite.py
ci/: github-actions.yml
docs/: accelerate_optimization_findings.md  accelerate_strategy.md  assembly_analysis.md  assembly_comparison.md  assembly_comparison_final.md  axis0_float32_guardrail.md  benchmark_regression_report.md  benchmark_results_summary.md  blas_investigation.md  blas_optimization.md  comparison_summary.md  deep_optimization_findings.md  deep_performance_analysis.md  docker_benchmarking.md  docker_benchmarking_guide.md  docker_linux_benchmarking_status.md  docker_linux_benchmarking_summary.md  final_analysis_summary.md  fix_1024_regressions_plan.md  float32_2048_optimization_attempts.md  function_trace_analysis.md  further_optimizations_plan.md  github_actions_arm64_benchmarking.md  global_reduction_next_steps.md  hand_tuned_assembly.md  hot_loop_analysis.md  instruments_analysis.md  linux_benchmarking_alternatives.md  linux_development_guide.md  linux_performance_optimization_results.md  linux_testing_guide.md  mean_axis0_linux_fix_status.md  mean_axis0_linux_issue.md  mean_axis0_numpy_gap_analysis.md  mean_axis0_remaining_lags_fix_summary.md  neon_implementation_analysis.md  neon_pattern_analysis.md  non_temporal_stores.md  numpy_alignment_plan.md  numpy_investigation.md  (+23 more)
rust/: Cargo.toml  build.rs  test_build
rust/src/: blas.rs  lib.rs  metrics.rs  test_support.rs
rust/src/reduce/: tiled.rs
rust/src/simd/: backend.rs  codegen.rs  cpu.rs  dispatch.rs  mod.rs
rust/src/tiling/: mod.rs
rust/tests/: python_api.rs
scripts/: benchmark_blas_options.py  check_blas_simd.py  compare_github_actions_results.py  compare_numpy_raptors.py  compare_profiles.sh  compare_scale_overhead.py  (+25 more)
(+136 files in other folders)
