[package]
name = "raptors"
version = "0.0.2"
edition = "2021"
authors = ["Odos Matthews <odosmatthews@gmail.com>"]
license = "MIT"
description = "Rust core crate for the Raptors array library."
repository = "https://github.com/eddiethedean/raptors"

[lib]
name = "raptors"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python-extension", "matrixmultiply-backend"]
python-extension = ["pyo3/extension-module"]
test-suite = ["pyo3/auto-initialize"]
matrixmultiply-backend = ["matrixmultiply"]

[dependencies]
pyo3 = "0.21"
numpy = "0.21"
num-traits = "0.2"
wide = "0.7"
rayon = "1.9"
matrixmultiply = { version = "0.3", optional = true }

[dev-dependencies]
libloading = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.maturin]
name = "raptors._raptors"

