[package]
name = "raptors"
version = "0.2.0"
edition = "2021"
authors = ["Odos Matthews <odosmatthews@gmail.com>"]
license = "MIT"
description = "Rust core crate for the Raptors array library."
repository = "https://github.com/eddiethedean/raptors"

[lib]
name = "raptors"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python-extension", "matrixmultiply-backend"]
python-extension = ["pyo3/extension-module"]
test-suite = ["pyo3/auto-initialize"]
matrixmultiply-backend = ["matrixmultiply"]
openblas = []

[dependencies]
pyo3 = "0.21"
numpy = "0.21"
num-traits = "0.2"
wide = "0.7"
rayon = "1.9"
matrixmultiply = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
libloading = "0.8"

[profile.release]
opt-level = 3
lto = "thin"  # Thin LTO - full LTO can hurt performance and increases build time significantly
codegen-units = 1
# Enable architecture-specific optimizations
# target-cpu=native is set via .cargo/config.toml to enable all CPU features

[package.metadata.maturin]
name = "raptors._raptors"

